Fix Footer on mobile

--- a/global_stylesheet.css
+++ b/global_stylesheet.css
@@ -108,6 +108,8 @@ a {
     footer {
         height: 200px;
         background: linear-gradient(to right, #8E0CFF, #FF4600);
+        display: flex;
+        flex-direction: column;
     }
 
     #BarelySmoothTextInFooter {
@@ -119,7 +121,6 @@ a {
     }
 
     #FooterSideLinks {
-        float: left;
         font-size: 20px;
         padding-top: 20px;
         padding-left: 20px;
